# WIP

./: .env  .env.example  .gitignore  0514.md  1.env  AUTH_FIELDS_IMPLEMENTATION.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  COMPATIBILITY_CPP_PY.md  CPP_TASKS.md  DB.md  LICENSE  README.md  README_NEW_STRUCTURE.md  WIP仕様表.md  WTP仕様表.md  all_sea.xml  app.md  check_auth_status.bat  check_query_server_implementation.py  check_ubuntu_deployment_issue.md  client.py  client.rs  commit_447fdc2_review.md  commit_d52c58b_analysis.md  coordinate_cache.json  debug_auth_fix.py  debug_auth_flow.py  debug_auth_settings.py  debug_cache_temperature.py  debug_python_client.py  debug_wind.py  direct_wind_test.py  disable_auth_env.bat  env311.yml  environment-ubuntu.yml  environment.yml  error_code.json  error_handling_spec.md  (+57 more)
Rust/: Cargo.toml  FIDELITY_REVIEW.md  README.md  TASKS.md  build.out  test_actual_packet  test_actual_packet.rs  test_auth.rs  test_debug.rs  test_exact_match.rs  test_packet_generation  test_packet_generation.rs  test_python_client.py  test_python_packet.py  test_response_packet  test_response_packet.rs
Rust/WIP_Client/: client.rs
Rust/benches/: simple_performance.rs
Rust/common/clients/: query_client.rs  weather_client.rs
Rust/common/packet/: dynamic_format.rs  mod.rs
Rust/common/utils/: auth.rs  cache.rs  config_loader.rs  file_cache.rs  mod.rs
Rust/deprecated/common/: mod.rs
Rust/docs/: ADVANCED_TUTORIAL.md  API_REFERENCE.md  AUTHENTICATION_GUIDE.md  BASIC_TUTORIAL.md  COMMAND_REFERENCE.md  COMPREHENSIVE_EXAMPLES.md  COMPREHENSIVE_TUTORIAL.md  FAQ.md  FAQ_COMPREHENSIVE.md  PYTHON_TO_RUST_MIGRATION.md  TUTORIAL.md  USAGE_EXAMPLES.md
Rust/examples/: client.rs  compare_auth_hash.rs  debug_actual_packet.rs  debug_auth_details.rs  debug_auth_encoding.rs  detailed_auth_comparison.rs  packet_showcase.rs  phase6_manual_compatibility_test.rs  server_auth_test.rs  structured_client.rs  test_auth_packet.rs  test_ext_field_debug.rs  test_python_match.rs  test_report.rs  test_report_client.rs  test_server_communication.rs  test_server_with_exact_packet.rs  unified_client.rs  wip_client.rs
Rust/src/: lib.rs
Rust/src/wip_common_rs/: client.rs  mod.rs
Rust/tests/: comprehensive_integration_tests.rs  comprehensive_unit_tests.rs  packet_format_golden_tests.rs  phase6_packet_format_compatibility.rs  python_rust_interoperability.rs  test_bit_utils.rs  test_checksum.rs  test_checksum_variable_length.rs  test_debug_checksum.rs  test_exact_python_match.rs  test_packets.rs  test_packets_fixed.rs  test_report_client_auth.rs  test_simple_api.rs  test_wip_client.rs
Rust/tests/common/: mock_server.rs  test_data_generator.rs
Rust/tests/integration/: test_comprehensive_end_to_end.rs  test_end_to_end.rs  test_server_integration.rs  (+1 more)
c++/: CMakeLists.txt  README.md
c++/WIP_Client/: client.cpp  client.h  example.cpp
c++/tests/: test_format_base.cpp
c++common/: CMakeLists.txt  placeholder.cpp
c++common/clients/: CMakeLists.txt  LocationClient.cpp  LocationClient.hpp  QueryClient.cpp  QueryClient.hpp  ReportClient.hpp  TASKS.md  WeatherClient.cpp  WeatherClient.hpp  clients.hpp
c++common/packet/: CMakeLists.txt  DynamicFormat.cpp  DynamicFormat.hpp  Packet.hpp  TASKS.md
c++common/utils/: Auth.cpp  Auth.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  ConfigLoader.hpp  FileCache.cpp  FileCache.hpp  TASKS.md
cpp/: CMakeLists.txt  README.md  README_PHASE6.md  REPORT_CLIENT_IMPLEMENTATION_PLAN.md  client.cpp  simple_build.sh  test_auth_config  test_auth_config.cpp  test_auth_config_new  test_client_build.cpp  test_client_simple.cpp  test_new_clients.cpp  test_new_clients2
cpp/WIP/: CMakeLists.txt
cpp/build-test/: Makefile  async_weather_cli  report_debug_tool  unified_client_cli  wip_client_cli  wip_packet_decode  wip_packet_gen  wip_packet_roundtrip
cpp/build-win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  async_weather_cli.vcxproj  async_weather_cli.vcxproj.filters  mock_report_server.vcxproj  mock_report_server.vcxproj.filters  packet_encoding_debug.vcxproj  packet_encoding_debug.vcxproj.filters  report_debug_tool.vcxproj  report_debug_tool.vcxproj.filters  test_auth_vars.vcxproj  test_auth_vars.vcxproj.filters  unified_client_cli.vcxproj  unified_client_cli.vcxproj.filters  wip_client_cli.vcxproj  wip_client_cli.vcxproj.filters  wip_packet_decode.vcxproj  wip_packet_decode.vcxproj.filters  wip_packet_gen.vcxproj  wip_packet_gen.vcxproj.filters  wip_packet_roundtrip.vcxproj  wip_packet_roundtrip.vcxproj.filters  wiplib.vcxproj  wiplib.vcxproj.filters  wiplib_cpp.sln
cpp/build-wsl/: Makefile  async_weather_cli  mock_report_server  packet_encoding_debug  report_debug_tool  test_auth_vars  unified_client_cli  wip_client_cli  wip_packet_decode  wip_packet_gen  wip_packet_roundtrip
cpp/build_phase2/: Makefile  async_weather_cli  wip_client_cli
cpp/build_phase3/: CTestTestfile.cmake  Makefile  wiplib_gtest[1]_include.cmake  wiplib_tests
cpp/build_temp/: CTestTestfile.cmake  Makefile  wip_client_cli  wiplib_golden  wiplib_gtest[1]_include.cmake
cpp/common/: CMakeLists.txt  platform.hpp
cpp/docs/: AUTH_PHASE0.md  AUTH_SPEC.md  AUTH_TASKS.md  CLIENT_DIRECTORY_RESTRUCTURE.md  Doxyfile  PYTHON_CPP_STRUCTURE_REVIEW.md  PYTHON_TO_CPP_MIGRATION_GUIDE.md  README.md  UNIFIED_CLIENT_CLI_USAGE.md
cpp/examples/: client_report_integration_demo.cpp  simple_report_client_tutorial.cpp
cpp/tests/: CMakeLists.txt  test_codec.cpp  test_dynamic.cpp  test_golden.cpp  test_packet.cpp
cpp/tools/: async_weather_cli.cpp  build_no_cmake.bat  build_no_cmake.sh  mock_report_server.cpp  packet_encoding_debug.cpp  report_debug_tool.cpp  test_auth_vars.cpp  unified_client_cli.cpp  wip_client_cli.cpp  wip_config_validator.cpp  wip_packet_analyzer.cpp  wip_packet_decode.cpp  wip_packet_gen.cpp  wip_packet_roundtrip.cpp  wip_performance_test.cpp
cpp/utils/: platform_utils.h
cpp/wip/: CMakeLists.txt  CMakePresets.json  client.cpp  wip.cpp  wip.h
wip-packet backup/: MIGRATION_GUIDE.md  README.md  pyproject.toml  setup.py  test_package.py
wip-packet backup/tests/: test_basic.py
(+1051 files in other folders)
