[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiplib"
version = "0.1.0"
description = "Awesome toolkit for weather data."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "WIP Team", email = "u22.wip.team@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.0",
    "schedule>=1.2.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
keywords = ["weather", "protocol", "data", "disaster", "alert", "Japan", "toolkit"]

[project.urls]
Homepage = "https://github.com/U22-2025/WIP"