[package]
name = "wip_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bitvec = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "6.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

[[example]]
name = "client"
path = "examples/client.rs"
test = false

[[example]]
name = "structured_client"
path = "examples/structured_client.rs"
test = false

[[example]]
name = "packet_showcase"
path = "examples/packet_showcase.rs"
test = false
