[package]
name = "wip_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
bitvec = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "6.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hmac = "0.12"
subtle = "2.4"
hex = "0.4"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
redis = { version = "0.24", optional = true }
gethostname = "0.4"
lazy_static = "1.4"
fastrand = "2.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
mockall = "0.11"

[features]
default = []
redis-logging = ["redis"]

[[example]]
name = "client"
path = "examples/client.rs"
test = false

[[example]]
name = "structured_client"
path = "examples/structured_client.rs"
test = false

[[example]]
name = "packet_showcase"
path = "examples/packet_showcase.rs"
test = false

[[example]]
name = "unified_client"
path = "examples/unified_client.rs"
test = false


# CLI binaries
[[bin]]
name = "wip-weather"
path = "src/bin/wip-weather.rs"

[[bin]]
name = "wip-location"
path = "src/bin/wip-location.rs"

[[bin]]
name = "wip-query"
path = "src/bin/wip-query.rs"

[[bin]]
name = "wip-report"
path = "src/bin/wip-report.rs"

[[bin]]
name = "wip-auth"
path = "src/bin/wip-auth.rs"

[[bin]]
name = "wip-cli"
path = "src/bin/wip-cli.rs"

[[bin]]
name = "wip-migration-tool"
path = "src/bin/wip_migration_tool.rs"
